fix(ZNTA-2307) WIP: tidy up alignment of translation filter toggle buttons as much as possible in editor and fix handling of ControlHeader in mobile media queries

--- a/server/zanata-frontend/src/frontend/app/editor/components/FilterToggle/index.css
+++ b/server/zanata-frontend/src/frontend/app/editor/components/FilterToggle/index.css
@@ -84,17 +84,12 @@ nav.flex-wrapper .Toggle-fakeCheckbox {
   padding-bottom: 1rem;
 }
 
-
 nav.flex-wrapper  .Toggle-fakeCheckbox {
   padding-bottom: 1rem;
   padding-right: 0.7rem;
 
 }
 
-nav.flex-wrapper  label.Toggle-label {
-  margin-top: 0.1375rem;
-}
-
-nav.flex-wrapper  label.Toggle-label:first-of-type {
+nav.flex-wrapper:first-of-type(label.Toggle-label) {
   margin-left: 0.375rem;
 }
